Update 'vlwh4ksnj-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c0b96f0360.bfvd.p3.openshiftapps.com/rhtap/rhtap-qe:40def028fa2b2d230efcea596d1737ff36ebb88f@sha256:6b5608ae692c1fb708f0d3247c864a238c131085371e23a8b979f46b7bb795da

--- a/components/vlwh4ksnj-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/vlwh4ksnj-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vlwh4ksnj-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c0b96f0360.bfvd.p3.openshiftapps.com/rhtap/rhtap-qe:40def028fa2b2d230efcea596d1737ff36ebb88f@sha256:6b5608ae692c1fb708f0d3247c864a238c131085371e23a8b979f46b7bb795da
+          name: container-image
